--- a/pixiv-sekai/pixiv-sekai.csproj
+++ b/pixiv-sekai/pixiv-sekai.csproj
@@ -103,6 +103,7 @@
     <Compile Include="LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PixivAPI.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
