Convert GridView of ranking images to bindings
- Rename MainPage->RankingPage
- Create RankingPageModel as the VM
- Bind GridView to Works (ObservableCollection)
- Add images to Works

--- a/pixiv-sekai/pixiv-sekai.csproj
+++ b/pixiv-sekai/pixiv-sekai.csproj
@@ -104,10 +104,11 @@
       <DependentUpon>LoginPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="PixivAPI.cs" />
-    <Compile Include="MainPage.xaml.cs">
-      <DependentUpon>MainPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RankingPage.xaml.cs">
+      <DependentUpon>RankingPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="RankingPageModel.cs" />
     <Compile Include="SimpleRelayCommand.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -135,9 +136,9 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MainPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
+    <Page Include="RankingPage.xaml">
       <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
