LoginPage: Add "logging in" screen
- Uses a Grid that is on top and binds the visibility
- Needs a converter that converts bool->visibility
- Need to call PropertyChanged() in the setter for the binding to be
updated

--- a/pixiv-sekai/pixiv-sekai.csproj
+++ b/pixiv-sekai/pixiv-sekai.csproj
@@ -99,6 +99,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BooleanToVisibilityConverter.cs" />
     <Compile Include="LoginPageModel.cs" />
     <Compile Include="LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
