--- a/pixiv-sekai/pixiv-sekai.csproj
+++ b/pixiv-sekai/pixiv-sekai.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="BooleanToVisibilityConverter.cs" />
+    <Compile Include="DimensionSubtractMarginConverter.cs" />
     <Compile Include="LoginPageModel.cs" />
     <Compile Include="LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
